<resources>
    <string name="app_name">X &amp; O</string>
    <string name="change_language_button">En</string>
    <string name="welcome_text">Welcome</string>
    <string name="button_1vs1">Player Vs Player</string>
    <string name="button_p_vs_phone">Player Vs Phone</string>
    <string name="button_Ok">Ok</string>
    <string name="choose_language_text_view">Select Language</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="player_1_name">Player 1 name</string>
    <string name="player_2_name">Player 2 name</string>
    <string name="history">History</string>
    <string name="button_new_game">New Game !</string>
    <string name="please_choose_play_mode">Please choose play mode</string>
    <string name="you_should_play">you should play</string>
    <string name="text_view_game_mode1">Game is Run</string>
    <string name="you_won_0_times">You won: 0 times</string>
    <string name="phone_won_0_times">Phone won: 0 times</string>
    <string name="x_should_play">(x) should play</string>
    <string name="won_0_times">won: 0 times</string>
    <string name="game_is_end">Game is End</string>
    <string name="buttom_alredy_played">Buttom alredy played</string>
    <string name="o_should_play">(o) should play</string>
    <string name="phone_play">Phone play ⌛</string>
    <string name="you_win_congratulations">You Win, Congratulations!</string>
    <string name="you_won">You won:</string>
    <string name="times">times</string>
    <string name="you_won_history">You\nWon</string>
    <string name="x_wins">(x) wins!</string>
    <string name="won">won:</string>
    <string name="won_history">\nWon</string>
    <string name="phone_win_good_luck">Phone Win, Good luck next time</string>
    <string name="phone_won">Phone won:</string>
    <string name="phone_won_history">Phone\nWon</string>
    <string name="o_wins">(o) wins!</string>
    <string name="draw">Draw!</string>
    <string name="draw_history">Draw</string>
    <string name="vs">Vs</string>
    <string name="you_vs_phone">You Vs Phone (</string>
    <string name="date_format">HH:mm | dd/MM/yyyy</string>
</resources>