<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_name"
        android:layout_width="336dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,32:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73">

        <EditText
            android:id="@+id/namePlayer1"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:background="@drawable/player_name_rounded"
            android:ems="10"
            android:hint="@string/player_1_name"
            android:paddingHorizontal="5dp"
            android:textColorHint="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/namePalyer2"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/player_name_rounded"
            android:ems="10"
            android:hint="@string/player_2_name"
            android:paddingHorizontal="5dp"
            android:textColorHint="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/namePlayer1"
            app:layout_constraintStart_toStartOf="@+id/namePlayer1"
            app:layout_constraintTop_toBottomOf="@+id/namePlayer1"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mode_Play"
        android:layout_width="336dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,32:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73">

        <ImageButton
            android:id="@+id/imageButton_Hard"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/play_mode"
            android:padding="6dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton_Normal"
            app:layout_constraintStart_toEndOf="@+id/imageButton_Normal"
            app:layout_constraintTop_toTopOf="@+id/imageButton_Normal"
            app:srcCompat="@drawable/hard"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton_Easy"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/play_mode"
            android:padding="6dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton_Normal"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_Normal"
            app:layout_constraintTop_toTopOf="@+id/imageButton_Normal"
            app:srcCompat="@drawable/easy"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton_Normal"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/play_mode"
            android:padding="6dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/normal"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/easyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageButton_Easy"
            app:layout_constraintStart_toStartOf="@+id/imageButton_Easy"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_Easy" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageButton_Normal"
            app:layout_constraintStart_toStartOf="@+id/imageButton_Normal"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_Normal" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/hard"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageButton_Hard"
            app:layout_constraintStart_toStartOf="@+id/imageButton_Hard"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_Hard" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="215dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_p_vs_phone"
        app:layout_constraintStart_toStartOf="@+id/button_p_vs_phone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/whatsapp_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginVertical="19dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/whatsapp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/x_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginVertical="19dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/x"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/instagram_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginVertical="19dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/instagram"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/facebook_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginVertical="19dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/facebook"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="205dp"
        android:layout_height="213dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_1vs1"
        app:layout_constraintDimensionRatio="h,6:5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.26"
        app:srcCompat="@drawable/xo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_p_vs_phone"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/player_or_phone"
        android:text="@string/button_p_vs_phone"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_1vs1"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/button_1vs1"
        app:layout_constraintTop_toBottomOf="@+id/button_1vs1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_1vs1"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/player_or_phone"
        android:text="@string/button_1vs1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <Button
        android:id="@+id/button_Ok"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/button_Ok"
        android:textColor="#000000"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:strokeColor="#000000"
        app:strokeWidth="3dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/languagesButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/play_mode"
        android:text="@string/change_language_button"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>